samples/_failures_safe/1761540025_9f5644_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c707cba4.c: In function ‘main’:
./samples/SAFE/__tmp_c707cba4.c:145: error: expected ‘{’ at end of input
